correct bug with specials chars (add docs function), resize searchform, "infobulles" with comboboxs, modification of stats page
git-svn-id: https://subversion.renater.fr/audiovideocours/trunk/server/univ-r_av@890 f5520b42-8414-0410-9ae7-91ee0cd12377